# workdir

./: .gitignore  Cargo.toml  README.md  SETUP.md  roadmap.md
.github/workflows/: publish-sdks.yml
cloud/: .gitignore  README.md  package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
cloud/src/: auth.ts  daemon.ts  db.ts  index.ts  views.ts
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: main.rs
crates/sandboxd/: Cargo.toml
crates/sandboxd/src/: app.rs  auth.rs  background.rs  bench.rs  builder.rs  capacity.rs  catalog.rs  config.rs  config_example.rs  error.rs  host.rs  hotpool.rs  images.rs  knobs.rs  lib.rs  lifecycle.rs  model.rs  node.rs  pricing.rs  remote.rs  scheduler.rs  secrets.rs  service.rs  store.rs  usage.rs
crates/sandboxd/src/api/: admin.rs  images.rs  internal.rs  mod.rs  nodes.rs  preview.rs  pty.rs  sandboxes.rs  secrets.rs  usage.rs  volumes.rs
crates/sandboxd/tests/: integration.rs
deploy/: build-image.sh  config.example.toml  install.sh  provision-node.sh  watchdog.sh
deploy/backup/: RESTORE.md  backup-state.sh  litestream.yml  setup-backups.sh
deploy/images/base/: Dockerfile  sandbox-init
deploy/systemd/: litestream.service  workdir-backup.service  workdir-backup.timer  workdir.service
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  FEATURES.md  REVIEW.md  RUNBOOK.md
examples/: browser_create.sh  feature_tour.py  quickstart_dev.sh  serve_lan.sh
sdk/python/: README.md  pyproject.toml
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
(+4 files in other folders)
